# BaseProg

Lesson1/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj  in.txt
Lesson10/Task1/: CMakeLists.txt  Task1.cpp  Task1.sln  Task1.vcxproj
Lesson10/Task2/: CMakeLists.txt  Task2.cpp  quadrilateral.cpp
Lesson11/Leaver/: Leaver.sln
Lesson11/Task1/: CMakeLists.txt  GreetMan.cpp  greeter.cpp  greeter.h
Lesson11/Task2/: CMakeLists.txt  GoodbyeMan.cpp
Lesson11/Task5/CMakeWay/: CMakeLists.txt  equaltriangle.cpp  figure.cpp  rectang.cpp  rectang.h  rhomb.cpp  triangle.cpp
Lesson2/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
Lesson2/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
Lesson2/Task3/: Task3.cpp  Task3.sln  Task3.vcxproj
Lesson3/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
Lesson3/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
Lesson4/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj  out.txt
Lesson4/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
Lesson5/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
Lesson5/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
Lesson5/Task3/: Task3.cpp  Task3.sln  Task3.vcxproj
Lesson6/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj  Task1.vcxproj.filters  make_math_operations.cpp  make_math_operations.h
Racing/: Racing.sln
Racing_CMake/: CMakeLists.txt  broom.cpp  carpet_aircraft.cpp  eagle.cpp  fast_camel.cpp  land_veachle.cpp  racing_proccess.cpp  user_interconnection.cpp  veachle.cpp
Racing_CMake/Racing_headers/: air_veachle.h  all_road_shoes.h  broom.h  carpet_aircraft.h  centaur.h  land_veachle.h  racing_proccess.h  veachle.h
(+324 files in other folders)
